# opt-out

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  robots.txt  site.webmanifest  sitemap.xml  style.css
.github/workflows/: ci.yml  deploy.yml
scripts/: generate_seo_assets.mjs
src/: app.rs  catalog.rs  main.rs  model.rs  search.rs  status.rs  storage.rs
tests/: e2e_menu.rs
