[package]
name = "opt-out"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.8.12", features = ["csr"] }
leptos_router = "0.8.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Blob",
  "Clipboard",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlAnchorElement",
  "Navigator",
  "NodeList",
  "Storage",
  "Url",
  "Window",
] }

[dev-dependencies]
thirtyfour = { version = "0.37.1", default-features = false, features = ["reqwest", "rustls"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
